<resources>
    <string name="app_name">AR定检助手</string>
    <string name="action_settings">Settings</string>
    <string name="doit">DOIT</string>
    <string name="ask_saving_picture">是否保存图片？</string>
    <string name="load_more">正在加载更多...</string>
    <string name="search">搜索</string>

    <string name="behavior_contents">com.view.behavior.uc.UcNewsContentBehavior</string>
    <string name="behavior_uc_header_pager">com.view.behavior.uc.UcNewsHeaderPagerBehavior</string>
    <string name="behavior_uc_title">com.view.behavior.uc.UcNewsTitleBehavior</string>
    <string name="behavior_uc_news_tab">com.view.behavior.uc.UcNewsTabBehavior</string>

    <string name="exit_app">退出登录</string>
    <string name="scan_login_hint">扫码登录</string>
    <string name="scan_device_hint">扫码登录</string>
    <string name="scan_login_qrcode">对准登录二维码扫描</string>
    <string name="scan_device_qrcode">对准设备二维码扫描</string>
    <string name="zxing_scanner_tip">扫描提示</string>
    <string name="operation_risk">作业风险</string>
    <string name="device_info">设备资料</string>
    <string name="executed">已执行</string>
    <string name="unexecuted">未执行</string>
    <string name="pre_operation">上一步</string>
    <string name="next_operation">下一步</string>
    <string name="close">关闭</string>
    <string name="pre_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="edit">填写数据</string>
    <string name="select">选择</string>
    <string name="title_excute">二次设备及回路工作安全技术措施单</string>
    <string name="title_process">作业过程</string>
    <string name="start_edit">开始表单填写</string>
    <string name="help">请求协助</string>
    <string name="device_name">装置名称：</string>
    <string name="device_number">装置型号:</string>
    <string name="check_code">校验码：</string>
    <string name="device_version">装置版本号：</string>
    <string name="factory">生产厂家：</string>
    <string name="user_name">巡检员</string>
    <string name="recovered">已恢复</string>
    <string name="unrecorver">未恢复</string>
    <string name="continue_edit">继续填写</string>
    <string name="restart_edit">重新开始</string>
    <string name="status_good">状态良好</string>
    <string name="status_not_good">状态不良</string>
    <string name="no_this_item">没有该项目</string>
    <string name="export_excel">导出表单</string>
    <string name="no_device_info">暂无资料！</string>
    <string name="back_to_dir">返回目录</string>
</resources>
