<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    android:id="@+id/parent">
    <include layout="@layout/include_top_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            >
            <TextView
                android:id="@+id/tv_first_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/excel_left_padding_15"
                android:background="@mipmap/bg"
                style="@style/text_style_white_bold"
                android:gravity="center_vertical"
                android:text="@string/title_process"/>

            <TextView
                android:id="@+id/device_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:drawableLeft="@mipmap/icon_equipmentinformation"
                android:background="@mipmap/button"
                style="@style/text_style_white_bold"
                android:textSize="12sp"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="@string/device_info"
                />

            <TextView
                android:id="@+id/opration_risk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/device_info"
                android:clickable="true"
                android:text="@string/help"
                android:contentDescription="@string/help"
                android:drawableLeft="@mipmap/hileia"
                android:background="@mipmap/button"
                style="@style/text_style_white_bold"
                android:textSize="12sp"
                android:padding="5dp"
                android:drawablePadding="5dp"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@mipmap/bg1"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="作业过程"
                    android:paddingLeft="@dimen/excel_left_padding_15"
                    android:paddingTop="18dp"
                    android:paddingBottom="10dp"
                    style="@style/text_style_white_bold"/>
                <TextView
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/half_white"
                    android:layout_marginRight="@dimen/excel_left_padding_15"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/device_name"
                    style="@style/text_style_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_name" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:weightSum="4">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/device_number"
                            style="@style/text_style_white"
                            android:layout_weight="0.8"/>

                        <TextView
                            android:id="@+id/device_number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/device_number"
                            android:gravity="center"
                            android:clickable="true"
                            style="@style/text_style_white"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/check_code"
                            style="@style/text_style_white"
                            android:layout_weight="0.8"
                            />

                        <TextView
                            android:id="@+id/check_code"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/check_code"
                            android:gravity="center"
                            android:clickable="true"
                            style="@style/text_style_white"/>
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:weightSum="4">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/device_version"
                        style="@style/text_style_white"
                        android:layout_weight="0.8"/>
                    <TextView
                        android:id="@+id/device_version"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/device_version"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:clickable="true"
                        style="@style/text_style_white"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/factory"
                        style="@style/text_style_white"
                        android:layout_weight="0.8"/>
                    <TextView
                        android:id="@+id/factory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/factory"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:clickable="true"
                        style="@style/text_style_white"
                        />
                </LinearLayout>



            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:weightSum="4"
                android:gravity="center_horizontal"
                >
                <Button
                    android:id="@+id/previousStepBtn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/buutton_height"
                    android:layout_marginLeft="26dp"
                    android:background="@drawable/selector_button_bg"
                    style="@style/text_style_white_bold"
                    android:textSize="14sp"
                    android:text="@string/pre_operation"
                    android:contentDescription="@string/pre_operation"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/nextStepBtn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/buutton_height"
                    android:layout_marginLeft="26dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/selector_button_bg"
                    style="@style/text_style_white_bold"
                    android:textSize="14sp"
                    android:text="@string/next_operation"
                    android:contentDescription="@string/next_operation"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
