<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/include_top_bar"></include>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/cameraLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/iv_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@mipmap/ic_launcher"
            />
        <TextView
            android:id="@+id/tv_scan_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_first_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="二次设备及回路工作安全技术措施单" />

            <TextView
                android:id="@+id/tv_device_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:drawableTop="@mipmap/ic_launcher"
                android:text="@string/device_info" />

            <TextView
                android:id="@+id/tv_opration_risk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/tv_device_info"
                android:clickable="true"
                android:drawableTop="@mipmap/ic_launcher"
                android:text="@string/operation_risk" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/form_bg"
            android:orientation="vertical"
            android:weightSum="5">

            <TextView
                android:id="@+id/tv_second_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="(一)在220kV砚后甲线主一保护屏(1P)" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:padding="5dp"
                android:text="密封工作票" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_executed"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/form_bg"
                    android:text="@string/executed" />

                <Button
                    android:id="@+id/btn_unexecuted"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/form_bg"
                    android:text="@string/unexecuted" />

                <Button
                    android:id="@+id/btn_pre_operation"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/form_bg"
                    android:text="@string/pre_operation" />

                <Button
                    android:id="@+id/btn_next_operation"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/form_bg"
                    android:text="@string/next_operation" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/" />

                <TextView
                    android:id="@+id/tv_total_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
    </FrameLayout>

</LinearLayout>