<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center"
             android:padding="@dimen/app_padding"
             >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/bg2"
        android:layout_weight="1"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:paddingLeft="26dp"
        android:paddingRight="26dp">
       <ScrollView
           android:id="@+id/scrollView"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:scrollbars="vertical">
           <HorizontalScrollView
               android:id="@+id/horizontal_scrollview"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scrollbars="horizontal"
               >
               <com.lxj.xpopup.photoview.PhotoView
                   android:id="@+id/photoview"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </HorizontalScrollView>
       </ScrollView>

        <TextView
            android:id="@+id/pre_picture"
            style="@style/text_style_blue_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:clickable="true"
            android:drawableLeft="@mipmap/iconrightback"
            android:drawablePadding="5dp"
            android:text="@string/pre_page"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/next_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/iconleftback"
            android:layout_marginRight="8dp"
            android:drawablePadding="5dp"
            android:text="@string/next_page"
            style="@style/text_style_blue_bold"
            android:clickable="true"
            android:visibility="gone"
             />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="放大"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="缩小"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="向左"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="向右"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="向上"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="向下"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@mipmap/button_default"
            android:text="@string/close"
            style="@style/text_style_white_bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            />
    </LinearLayout>




</LinearLayout>